style: fix sidebar clipping

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -578,3 +578,7 @@ button.clean-btn.navbar-sidebar__close>svg {
 .theme-doc-version-badge {
   margin-bottom: 1rem;
 }
+
+.theme-doc-sidebar-container {
+  clip-path: none !important;
+}
